deploy/kubernetes/pilot/ghcr-edge/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: discussion-map-pilot
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: http
      nodePort: 30100
    - name: websocket
      port: 8765
      targetPort: websocket
      nodePort: 30101
